2007-08-09  Mike Sperber  <mike@xemacs.org>

	* startup.el (migrate-user-init-file): Create backup of
	`user-init-file' before migrating.
	* startup.el (maybe-migrate-user-init-file): Print
	information about backup file.
	(maybe-create-compatibility-dot-emacs): Follow above change.

2007-08-07  Mike Sperber  <mike@xemacs.org>

	* setup-paths.el (paths-find-doc-directory):
	(paths-find-exec-directory):
	(paths-find-lisp-directory):
	(paths-find-mule-lisp-directory):
	(paths-construct-info-path):
	(paths-find-data-directory):
	* packages.el (packages-find-installation-package-directories): 
	* find-paths.el (paths-for-each-emacs-directory):
	(paths-find-emacs-directories):
	(paths-find-emacs-directory):
	(paths-for-each-site-directory):
	(paths-find-site-directory):
	(paths-find-site-directories):
	(paths-for-each-version-directory):
	(paths-find-version-directories):
	(paths-find-version-directory): Generalize to multiple bases.
	(paths-find-architecture-directory): Use above to give roots
	precedence over bases.  This means, for example, that a directory
	in an in-place root will always get precedence over an installed
	root.
	
2007-08-06  Aidan Kehoe  <kehoea@parhasard.net>

	* mule/mule-coding.el (make-8-bit-coding-system): 
	Eliminate byte compiler warnings for the generated coding systems.
	* mule/mule-msw-init-late.el (l):
	* mule/mule-x-init.el (x-use-halfwidth-roman-font):
	Add a couple of declare-fboundp calls for functions we know will
	be bound on a Windows build, to silence the byte compiler. 

2007-08-06  Aidan Kehoe  <kehoea@parhasard.net>

	* diagnose.el (show-memory-usage):
	* diagnose.el (show-object-memory-usage-stats):
	* diagnose.el (show-mc-alloc-memory-usage):
	* diagnose.el (show-gc-stats):
	Only call sort-numeric-fields when it's bound. It will be, for
	anyone who has any business calling these functions; it's in
	xemacs-base.
	* font.el:
	Tell the byte compiler about a few more functions that are