@@ -220,9 +220,10 @@ directory."
     ("Belgium (be.xemacs.org)" "ftp.be.xemacs.org" "xemacs/packages")
     ("Brazil (br.xemacs.org)" "ftp.br.xemacs.org" "pub/xemacs/packages")
     ("Canada (ca.xemacs.org)" "ftp.ca.xemacs.org" "pub/Mirror/xemacs/packages")
-    ("Canada (crc.ca)" "ftp.crc.ca" "pub/packages/editors/xemacs/packages")
     ("Canada (nrc.ca)" "ftp.nrc.ca" "pub/packages/editors/xemacs/packages")
-;     ;; no anonymous ftp available:
+    ;; no anonymous ftp available, uncomment when updating website
+    ;; with
+    ;; xemacs-builds/adrian/website/package-get-2-download-sites.el
 ;     ("Chile (cl.xemacs.org)" "ftp.cl.xemacs.org" "packages")
     ("Czech Republic (cz.xemacs.org)" "ftp.cz.xemacs.org" "MIRRORS/ftp.xemacs.org/pub/xemacs/packages")
     ("Denmark (dk.xemacs.org)" "ftp.dk.xemacs.org" "xemacs/packages")
@@ -233,7 +234,6 @@ directory."
     ("Germany (de.xemacs.org)" "ftp.de.xemacs.org" "pub/ftp.xemacs.org/tux/xemacs/packages")
     ("Greece (gr.xemacs.org)" "ftp.gr.xemacs.org" "mirrors/XEmacs/ftp/packages")
     ("Hong Kong (hk.xemacs.org)" "ftp.hk.xemacs.org" "pub/xemacsftp/packages")
-    ("Iceland (is.xemacs.org)" "ftp.is.xemacs.org" "pub/xemacs/packages")
     ("Ireland (ie.xemacs.org)" "ftp.ie.xemacs.org" "mirrors/ftp.xemacs.org/pub/xemacs/packages")
     ("Ireland (heanet.ie)" "ftp.heanet.ie" "mirrors/ftp.xemacs.org/packages")
     ("Italy (it.xemacs.org)" "ftp.it.xemacs.org" "unix/packages/XEMACS/packages")
@@ -243,12 +243,10 @@ directory."
 ;   ("Japan (jaist.ac.jp)" "ftp.jaist.ac.jp" "pub/GNU/xemacs/packages")
 ;   ("Japan (jp.xemacs.org)" "ftp.jp.xemacs.org" "pub/GNU/xemacs/packages")
 ;   ("Japan (nucba.ac.jp)" "mirror.nucba.ac.jp" "mirror/xemacs/packages")
-    ("Japan (sut.ac.jp)" "sunsite.sut.ac.jp" "pub/archives/packages/xemacs/packages")
     ("Korea (kr.xemacs.org)" "ftp.kr.xemacs.org" "pub/tools/emacs/xemacs/packages")
     ("Netherlands (nl.xemacs.org)" "ftp.nl.xemacs.org" "pub/xemacs/ftp/packages")
     ("New Zealand (nz.xemacs.org)" "ftp.nz.xemacs.org" "mirror/ftp.xemacs.org/packages")
     ("Norway (no.xemacs.org)" "ftp.no.xemacs.org" "pub/xemacs/packages")
-    ("Poland (pl.xemacs.org)" "ftp.pl.xemacs.org" "pub/unix/editors/xemacs/packages")
     ("Portugal (pt.xemacs.org)" "ftp.pt.xemacs.org" "pub/MIRRORS/ftp.xemacs.org/packages")
     ("Russia (ru.xemacs.org)" "ftp.ru.xemacs.org" "pub/emacs/xemacs/packages")
     ("Saudi Arabia (sa.xemacs.org)" "ftp.sa.xemacs.org" "pub/xemacs.org/packages")
@@ -259,9 +257,7 @@ directory."
     ("UK (uk.xemacs.org)" "ftp.uk.xemacs.org" "sites/ftp.xemacs.org/pub/xemacs/packages")
     ("US (ibiblio.org)" "mirrors.ibiblio.org" "pub/mirrors/xemacs/packages")
     ("US (stealth.net)" "ftp.stealth.net" "pub/mirrors/ftp.xemacs.org/pub/xemacs/packages")
-    ("US (unc.edu)" "metalab.unc.edu" "pub/packages/editors/xemacs/packages")
-    ("US (us.xemacs.org)" "ftp.us.xemacs.org" "pub/xemacs/packages")
-;   ("US (utk.edu)" "ftp.sunsite.utk.edu" "pub/xemacs/packages")
+    ("US (us.xemacs.org)" "ftp.us.xemacs.org" "pub/mirrors/xemacs/packages")
     )
   "*List of remote sites available for downloading packages.
 List format is '(site-description site-name directory-on-site).
@@ -295,11 +291,11 @@ variable actually used to specify package download sites."
      "pub/xemacs/xemacs-21.5/experimental/packages")
     ("Canada Pre-Releases (ca.xemacs.org)" "ftp.ca.xemacs.org"
      "pub/Mirror/xemacs/beta/experimental/packages")
-    ("Canada Pre-Releases (crc.ca)" "ftp.crc.ca"
-     "pub/packages/editors/xemacs/beta/experimental/packages")
     ("Canada Pre-Releases (nrc.ca)" "ftp.nrc.ca"
      "pub/packages/editors/xemacs/beta/experimental/packages")
-;     ;; no anonymous ftp available:
+    ;; no anonymous ftp available, uncomment when updating website
+    ;; with
+    ;; xemacs-builds/adrian/website/package-get-2-download-sites.el
 ;     ("Chile Pre-Releases (cl.xemacs.org)" "ftp.cl.xemacs.org"
 ;      "beta/experimental/packages")
     ("Czech Republic Pre-Releases (cz.xemacs.org)" "ftp.cz.xemacs.org"
@@ -320,8 +316,6 @@ variable actually used to specify package download sites."
      "mirrors/XEmacs/ftp/beta/experimental/packages")
     ("Hong Kong Pre-Releases (hk.xemacs.org)" "ftp.hk.xemacs.org"
      "pub/xemacsftp/beta/experimental/packages")
-    ("Iceland Pre-Releases (is.xemacs.org)" "ftp.is.xemacs.org"
-     "pub/xemacs/beta/experimental/packages")
     ("Ireland Pre-Releases (ie.xemacs.org)" "ftp.ie.xemacs.org"
      "mirrors/ftp.xemacs.org/pub/xemacs/beta/experimental/packages")
     ("Ireland Pre-Releases (heanet.ie)" "ftp.heanet.ie"
@@ -338,8 +332,6 @@ variable actually used to specify package download sites."
 ;    "pub/GNU/xemacs/beta/experimental/packages")
 ;   ("Japan Pre-Releases (jp.xemacs.org)" "ftp.jp.xemacs.org"
 ;    "pub/GNU/xemacs/beta/experimental/packages")
-    ("Japan Pre-Releases (sut.ac.jp)" "sunsite.sut.ac.jp"
-     "pub/archives/packages/xemacs/xemacs-21.5/experimental/packages")
     ("Korea (kr.xemacs.org)" "ftp.kr.xemacs.org"
      "pub/tools/emacs/xemacs/beta/experimental/packages")
     ("Netherlands (nl.xemacs.org)" "ftp.nl.xemacs.org"
@@ -348,8 +340,6 @@ variable actually used to specify package download sites."
      "mirror/ftp.xemacs.org/packages")
     ("Norway Pre-Releases (no.xemacs.org)" "ftp.no.xemacs.org"
      "pub/xemacs/beta/experimental/packages")
-    ("Poland Pre-Releases (pl.xemacs.org)" "ftp.pl.xemacs.org"
-     "pub/unix/editors/xemacs/beta/experimental/packages")
     ("Portugal Pre-Releases (pt.xemacs.org)" "ftp.pt.xemacs.org"
      "pub/MIRRORS/ftp.xemacs.org/beta/experimental/packages")
     ("Russia Pre-Releases (ru.xemacs.org)" "ftp.ru.xemacs.org"
@@ -370,12 +360,8 @@ variable actually used to specify package download sites."
      "pub/mirrors/xemacs/beta/experimental/packages")
     ("US Pre-Releases (stealth.net)" "ftp.stealth.net"
      "pub/mirrors/ftp.xemacs.org/pub/xemacs/beta/experimental/packages")
-    ("US Pre-Releases (unc.edu)" "metalab.unc.edu"
-     "pub/packages/editors/xemacs/beta/experimental/packages")
     ("US Pre-Releases (us.xemacs.org)" "ftp.us.xemacs.org"
-     "pub/xemacs/beta/experimental/packages")
-;   ("US Pre-Releases (utk.edu)" "ftp.sunsite.utk.edu"
-;    "pub/xemacs/beta/experimental/packages")
+     "pub/mirrors/xemacs/beta/experimental/packages")
 )
   "*List of remote sites available for downloading \"Pre-Release\" packages.
 List format is '(site-description site-name directory-on-site).
